# AbseilTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
gui/: CMakeLists.txt
gui/include/: ChartView.h  MainWindow.h  SettingsWidget.h  WidgetUtils.h
gui/resources/: tools.qrc
gui/resources/styles/: tools.css
gui/src/: ChartView.cpp  MainWindow.cpp  SettingsWidget.cpp  WidgetUtils.cpp
include/NetworkLayer/: NetworkLayer.h
libs/: CMakeLists.txt
libs/GuiModel/: CMakeLists.txt
libs/GuiModel/include/: GuiModel.h
libs/GuiModel/src/: GuiModel.cpp
libs/IModel/: CMakeLists.txt
libs/IModel/include/: IModel.h
libs/Model/: CMakeLists.txt
libs/Model/include/: Model.h
libs/NetworkLayer/: CMakeLists.txt
libs/NetworkLayer/include/: INetworkLayer.h  INetworkWorker.h  IconLoadLayer.h  IconLoadWorker.h  NetworkLayer.h  NetworkLayerStorage.h  NetworkWorkerStorage.h  UpdateCoinsLayer.h  UpdateCoinsWorker.h
libs/NetworkLayer/src/: INetworkLayer.cpp  INetworkWorker.cpp  IconLoadLayer.cpp  IconLoadWorker.cpp  NetworkLayer.cpp  NetworkLayerStorage.cpp  NetworkWorkerStorage.cpp  UpdateCoinsLayer.cpp  UpdateCoinsWorker.cpp
src/: main.cpp
src/NetworkLayer/: NetworkLayer.cpp
